syntax = "proto3";
package yokai_game;

option go_package = "github.com/yokaiio/yokai_server/proto/game";

////////////////////////////////////////////////
// Token
message Token {
    int32 Type = 1;
    int64 Value = 2;
    int64 MaxHold = 3;
}

message C2M_AddToken {
    int32 Type = 1;
    int64 Value = 2;
}

message C2M_QueryTokens {
}

message M2C_TokenList {
    repeated Token Tokens = 1;
}

message M2C_TokenUpdate {
    Token Info = 1;
}
